# BasketIntelligence

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: create_python_release.yml  create_tag_trigger_release.yml  data_ingestion_dynamic_big_query.yml  data_ingestion_kmeans_team_big_query.yml  python-app-test.yml
BaseketIntelligence/: create_season.py
BasketIntelligence/: create_season.py  load_season_data.py  ml_analysis.py
BasketIntelligence/utils/: __init__.py  connect_postgres.py  connect_sqlite.py  connect_sqlite3.py  create_big_query_client.py  create_spark_session.py  logger.py
DataLoad/: Load_ml_aata_to_Big_Query.py  data_ingestion_ml_data_to_Big_Query.py  data_ingestion_to_big_query_dynamic.py
docker/postgres/: docker-compose.yaml
tests/: test_create_season.py
tests/data_quality_test/: run_great_expectations.py  run_great_expectations_ml_analysis.py
tests/pyTest/: test_create_season.py  test_load_data_to_sqlite.py  test_ml_analysis.py
