[project]
name = "BasketIntelligence"
version = "1.0.1"
authors = [
    { name = "zhenxiay", email = "yu.zhenxiao.yz@gmail.com" },
]
description = "Enables analysis and dashboarding of NBA statistic with data from basket_reference.com." # You might want to add a more descriptive one
readme = "README.md"
requires-python = ">=3.8" # Assuming Python 3.8 or newer, adjust if needed
dependencies = [
    "pandas",
    "pyspark==3.5.1",
    "google",
    "google-cloud",
    "google-cloud-bigquery",
    "sqlalchemy",
    "psycopg2",
    "lxml",
    "pyarrow",
    "scikit-learn",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/zhenxiay/BaseketIntelligence"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
